--- a/k8s/base/app1/deploy.yaml
+++ b/k8s/base/app1/deploy.yaml
@@ -21,9 +21,9 @@ spec:
         - name: PORT
           value: "8080"
         - name: INTRA_URL
-          value: http://demo.app1.svc.cluster.local:8080
+          value: http://demo.app1.svc.cluster.local:8080/status
         - name: CROSS_URL
-          value: http://demo.app2.svc.cluster.local:8080
+          value: http://demo.app2.svc.cluster.local:8080/status
         - name: INTERNET_URL
           value: https://www.rancher.com
         ports:
