--- a/k8s/working/allow-cross-namespace.yaml
+++ b/k8s/working/allow-cross-namespace.yaml
@@ -1,17 +1,3 @@
-apiVersion: security.istio.io/v1beta1
-kind: AuthorizationPolicy
-metadata:
-  name: allow-cross-namespace
-  namespace: app1
-spec:
-  action: ALLOW
-  selector:
-    matchLabels:
-      app: demo
-  rules:
-  - from:
-    - source:
-        principals: ["cluster.local/ns/app2/sa/default"]
 ---
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
@@ -27,3 +13,7 @@ spec:
   - from:
     - source:
         principals: ["cluster.local/ns/app1/sa/default"]
+    to:
+    - operation:
+        methods: ["GET"]
+        paths: ["/status"]
