--- a/k8s/working/deny-authpol.yaml
+++ b/k8s/working/deny-authpol.yaml
@@ -5,3 +5,11 @@ metadata:
  namespace: app1
 spec:
   {}
+---
+apiVersion: security.istio.io/v1beta1
+kind: AuthorizationPolicy
+metadata:
+ name: default-deny
+ namespace: app2
+spec:
+  {}
