--- a/k8s/working/peer-authentication.yaml
+++ b/k8s/working/peer-authentication.yaml
@@ -6,3 +6,12 @@ metadata:
 spec:
   mtls:
     mode: STRICT
+---
+apiVersion: security.istio.io/v1beta1
+kind: PeerAuthentication
+metadata:
+  name: default
+  namespace: app2
+spec:
+  mtls:
+    mode: STRICT
