--- a/k8s/working/allow-cross-namespace.yaml
+++ b/k8s/working/allow-cross-namespace.yaml
@@ -18,5 +18,5 @@ spec:
         methods: ["GET"]
         paths: ["/status"]
     when:
-    - key: request.headers['X-Auth-Token']
-      values: ["secret"]
+    - key: request.headers[X-Auth-Token]
+      values: ["sup3r_s3cr3t"]
