--- a/k8s/base/app1/deploy.yaml
+++ b/k8s/base/app1/deploy.yaml
@@ -12,6 +12,8 @@ spec:
     metadata:
       labels:
         app: demo
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       containers:
       - name: demo
