--- a/k8s/working/2-deny-authpol.yaml
+++ b/k8s/working/2-deny-authpol.yaml
@@ -2,14 +2,6 @@ apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
  name: default-deny
- namespace: app1
-spec:
-  {}
----
-apiVersion: security.istio.io/v1beta1
-kind: AuthorizationPolicy
-metadata:
- name: default-deny
- namespace: app2
+ namespace: istio-system
 spec:
   {}
