--- a/k8s/base/app2/virtualservice.yaml
+++ b/k8s/base/app2/virtualservice.yaml
@@ -7,7 +7,7 @@ spec:
   gateways:
   - istio-system/main
   hosts:
-  - app2.atoy.lol
+  - app2.example.com
   http:
   - route:
     - destination:
