--- a/k8s/working/1-peer-authentication.yaml
+++ b/k8s/working/1-peer-authentication.yaml
@@ -15,3 +15,13 @@ metadata:
 spec:
   mtls:
     mode: STRICT
+# ---
+# Apply STRICT policy globally
+# apiVersion: security.istio.io/v1beta1
+# kind: PeerAuthentication
+# metadata:
+#   name: default
+#   namespace: istio-system
+# spec:
+#   mtls:
+#     mode: STRICT
