--- a/k8s/working/5-allow-cross-namespace.yaml
+++ b/k8s/working/5-allow-cross-namespace.yaml
@@ -21,5 +21,5 @@ spec:
     # when:
     # - key: request.headers[X-Auth-Token]
     #   values: ["sup3r_s3cr3t"]
-    # - key: request.auth.claims[auth][token]
-    #   values: ["sup3r_s3cr3t"]
+    # - key: request.auth.claims[auth][group]
+    #   values: ["admin"]
