--- a/k8s/base/app1/virtualservice.yaml
+++ b/k8s/base/app1/virtualservice.yaml
@@ -7,7 +7,7 @@ spec:
   gateways:
   - istio-system/main
   hosts:
-  - app1.example.com
+  - app1.atoy.lol
   http:
   - route:
     - destination:
