--- a/k8s/examples/gateway.yaml
+++ b/k8s/examples/gateway.yaml
@@ -8,7 +8,7 @@ spec:
     app: istio-ingressgateway
   servers:
   - hosts:
-    - '*.example.com'
+    - '*.atoy.lol'
     port:
       name: http
       number: 80
@@ -22,5 +22,5 @@ spec:
       number: 443
       protocol: HTTPS
     tls:
-      credentialName: example-cert
+      credentialName: int-cert
       mode: SIMPLE
