--- a/k8s/examples/gateway.yaml
+++ b/k8s/examples/gateway.yaml
@@ -16,7 +16,7 @@ spec:
     tls:
       httpsRedirect: true
   - hosts:
-    - '*.example.com'
+    - '*.atoy.lol'
     port:
       name: https
       number: 443
