--- a/k8s/working/7-kubewarden-istio-policy.yaml
+++ b/k8s/working/7-kubewarden-istio-policy.yaml
@@ -13,8 +13,7 @@ spec:
     - kube-system
     - cattle-fleet-system
     - cert-manager
-    excluded_pod_labels:
-      istioEnforcing: disabled
+    excluded_pod_labels: {}
   rules:
     - apiGroups:
         - ""
