--- a/k8s/base/app2/deploy.yaml
+++ b/k8s/base/app2/deploy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: demo
   namespace: app2
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: demo
@@ -16,7 +16,7 @@ spec:
       containers:
       - name: demo
         image: harbor.atoy.dev/public/istio-demo-app:1.0
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: PORT
           value: "8080"
