--- a/k8s/working/1-peer-authentication.yaml
+++ b/k8s/working/1-peer-authentication.yaml
@@ -16,7 +16,7 @@ spec:
   mtls:
     mode: STRICT
 # ---
-# Apply STRICT policy globally
+# # Apply STRICT policy globally
 # apiVersion: security.istio.io/v1beta1
 # kind: PeerAuthentication
 # metadata:
